--- a/app/welcome/welcome.html
+++ b/app/welcome/welcome.html
@@ -1,4 +1,10 @@
-<h1>Kill The Bees!</h1>
+<div class="welcome__wrapper">
+	<div class="welcome__inner">
+		<h1 class="welcome__text">Kill The Bees!</h1>
 
-<p>Click play to start</p>
-<a href="#/game">Play</a>
+		<div class="goToGame__wrapper">
+			<p class="goToGame__text">Click play to start</p>
+			<a class="goToGame__link button__play" href="#/game">Play</a>
+		</div>
+	</div>
+</div>
