--- a/app/index.html
+++ b/app/index.html
@@ -11,18 +11,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="css/app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
 
-  <!--[if lt IE 7]>
+  <!--[if lt IE 9]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <div ng-view></div>
+  <main ng-view></main>
 
-  <p>Kill The Bees! created by <a href="http://edwardpayton.com" target="_blank">Edward Payton</a></p>
+  <footer>
+    <p>Kill The Bees! was created by <a href="http://edwardpayton.com" target="_blank" class="button__link">Edward Payton</a>.</p>
+  </footer>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
