--- a/app/welcome/welcome.html
+++ b/app/welcome/welcome.html
@@ -3,8 +3,8 @@
 		<h1 class="welcome__text">Kill The Bees!</h1>
 
 		<div class="goToGame__wrapper">
-			<p class="goToGame__text">Click play to start</p>
-			<a class="goToGame__link button__play" href="#/game">Play</a>
+			<p class="goToGame__text">How fast can you get them all?</p>
+			<p class="goToGame__text">Ready... Set... <a class="goToGame__link button__play" href="#/game">Go!</a></p>
 		</div>
 	</div>
 </div>
